# customAdmin_Dj

./: .gitignore  FONCTIONNALITES_ADMIN_FRONTEND.md  LIENS_ADMIN.md  MANIFEST.in  PACKAGE_ROADMAP.md  RAPPORT_FUSION.md  README.md  THEME_SYSTEM_GUIDE.md  mise_en_place.md  populate_db.py  pyproject.toml  setup.py
Autres/Package Recherches/: README.md
Autres/Présentation/: Présentation_IIT_admin_custom.pptx
Autres/Rapports Projet/: Daily Scrum 4 j1.docx  Daily Scrum 4 j10 j11.docx  Daily Scrum 4 j12.docx  Daily Scrum 4 j2.docx  Daily Scrum 4 j3.docx  Daily Scrum 4 j4 j5.docx  Daily Scrum 4 j6.docx  Daily Scrum 4 j7.docx  Daily Scrum 4 j8 j9.docx
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
admin_custom/: AUTODISCOVERY.md  INLINES_CUSTOMIZATION.md  admin.py  admin_site.py  admin_views.py  apps.py  auth_views.py  autodiscover.py  frontend_views.py  middleware.py  models.py  modern_model_admin.py  modern_views.py  urls.py  user_admin.py  views.py
admin_custom/migrations/: 0002_userpreference.py
admin_frontend/: README.md  admin_console.html  change_form.html  chart_create.html  dashboard.html  index.html  profile.html
admin_frontend/assets/: app.js  styles.css
admin_frontend/css/: admin_custom.css  design_system.css
admin_frontend/js/: admin_custom.js  layout.js
catalog/: admin.py  models.py
catalog/migrations/: 0001_initial.py
customAdmin_Dj_Bl_ou/: apps.py
sales/: admin.py  models.py
sales/migrations/: 0001_initial.py  0002_alter_invoice_invoice_number_and_more.py
sandbox/: settings.py  settings.py.bak  urls.py  views.py
templates/admin/: base.html  base_site.html  search_form.html
(+88 files in other folders)
